# sgid-client-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.sh  clean.sh  pyproject.toml  setup.py  test.sh
.github/workflows/: ci.yml  publish.yml
examples/flask/: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
examples/flask/fetch_static/: fetch_static.py
examples/flask/sgid_client/: IdTokenVerifier.py  SgidClient.py  decrypt_data.py  error.py  validation.py
sgid_client/: IdTokenVerifier.py  SgidClient.py  __init__.py  decrypt_data.py  error.py  generators.py  util.py  validation.py
sgidclient/: oidc.py
tests/: SgidClient_authorization_url_test.py  SgidClient_callback_test.py  SgidClient_constructor_test.py  SgidClient_parsedata_test.py  SgidClient_test.py  SgidClient_userinfo_test.py  generators_test.py  test_oidc.py  utils_test.py
tests/mocks/: constants.py  helpers.py  mockClientKeys.json  mockPrivateKeyPkcs1.pem  mockPrivateKeyPkcs8.pem  mockPublicJwks.json  mockPublicJwksAlternate.json
