[tool.poetry]
name = "sgid-flask-app"
version = "0.1.0"
description = ""
authors = ["Open Government Products"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
jwcrypto = "^1.4.2"
flask-cors = "^3.0.10"
sgid-client = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
